--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -19,6 +19,8 @@ jobs:
 test:
   runs-on: ubuntu-latest
   steps:
+    - name: Récupération code source
+      users: actions/checkout@v4
     - name: Etape 2
         run: |
            echo "Étape 2: Exécute les tests"
