--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -8,17 +8,21 @@ jobs:
   demo:
     name: Jobs Demo
     runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: true
+      matrix:
+        php: [8.1, 8.2, 8.3]
+    
     steps:
       - name: Première étape
         run: echo Hello!
 
-      - name: Script plus complexe
-        run: |
-          echo "Début du script"
-          echo "Étape 1: Clone le dépôt"
-test:
-  needs: demo
-  runs-on: ubuntu-latest
-  steps:
-    - name: Récupération code source
-      uses: actions/checkout@v4
+      - name: Script plus complexe - ${{ matrix.php}}
+        run: echo "Clone le dépôt"
+  test:
+    needs: demo
+    runs-on: ubuntu-latest
+    steps:
+      - name: Récupération code source
+        uses: actions/checkout@v4
